# prosperity-3

./: .cursorignore  .gitignore  Basket_1_trader_strategy.py  Basket_2_trader_strategy.py  Volcanic_Rock_trader.py  best.json  classes.py  datamodel.py  grid_search.py  resin.py  trader_kelp_meanreversion.py  trader_resin.py  trader_resin_draft.py  trader_squidink.py
grid_search/: .err  Cargo.toml  best.json  config.json  grid_search_results.csv  makefile  volcanic_rock.json
grid_search/src/: args.rs  config.rs  float_range.rs  lib.rs  main.rs  run.rs
