[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
csv = "1.3.1"
ctrlc = "3.4.6"
indicatif = "0.17.11"
parking_lot = "0.12.3"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wait-timeout = "0.2.1"
